--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -21,12 +21,12 @@
             <Image url="@../../../Imagenes/blue-sky-clouds.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="79.0" fitWidth="78.0" layoutX="29.0" layoutY="17.0">
+      <ImageView fitHeight="70.0" fitWidth="69.0" layoutX="28.0" layoutY="19.0">
          <image>
-            <Image url="@../../../Iconos/imagen-de-usuario-con-fondo-negro.png" />
+            <Image url="@../../../Iconos/iieditar.png" />
          </image>
       </ImageView>
-      <Pane layoutX="21.0" layoutY="20.0" onMouseClicked="#perfilClick" prefHeight="79.0" prefWidth="96.0" />
+      <Pane layoutX="21.0" layoutY="19.0" onMouseClicked="#perfilClick" prefHeight="70.0" prefWidth="78.0" />
       <StackPane fx:id="carrousel" layoutY="123.0" prefHeight="455.0" prefWidth="1000.0">
          <children>
             <Pane fx:id="pane2" prefHeight="621.0" prefWidth="899.0">
@@ -90,7 +90,7 @@
                </children>
             </Pane>
          </children></StackPane>
-      <Label fx:id="labelTitle" layoutX="418.0" layoutY="14.0" prefHeight="79.0" prefWidth="172.0" text="Viajes">
+      <Label fx:id="labelTitle" layoutX="413.0" layoutY="15.0" prefHeight="79.0" prefWidth="172.0" text="Viajes">
          <font>
             <Font name="Impact" size="64.0" />
          </font>
@@ -154,10 +154,10 @@
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="15.0" layoutY="637.0" opacity="0.6" prefHeight="45.0" prefWidth="105.0" style="-fx-background-color: white; -fx-border-color: grey;" />
-      <Label layoutX="60.0" layoutY="643.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
+      <Pane layoutX="15.0" layoutY="637.0" opacity="0.6" prefHeight="45.0" prefWidth="114.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="62.0" layoutY="640.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
          <font>
-            <Font name="Impact" size="26.0" />
+            <Font name="Impact" size="30.0" />
          </font>
          <textFill>
             <LinearGradient endX="1.0" endY="1.0" startX="1.0">
@@ -181,11 +181,11 @@
             <Image url="@../../../Iconos/flechaRoja.png" />
          </image>
       </ImageView>
-      <Pane layoutX="14.0" layoutY="636.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="106.0" />
-      <Pane layoutX="402.0" layoutY="637.0" opacity="0.6" prefHeight="46.0" prefWidth="196.0" style="-fx-background-color: white; -fx-border-color: grey;" />
-      <Label layoutX="422.0" layoutY="643.0" text="Reservar vuelo">
+      <Pane layoutX="13.0" layoutY="636.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="120.0" />
+      <Pane layoutX="397.0" layoutY="638.0" opacity="0.6" prefHeight="46.0" prefWidth="203.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="407.0" layoutY="640.0" text="Reservar vuelo">
          <font>
-            <Font name="Impact" size="26.0" />
+            <Font name="Impact" size="30.0" />
          </font>
          <textFill>
             <LinearGradient endX="1.0" endY="1.0" startX="1.0">
@@ -204,6 +204,6 @@
             </LinearGradient>
          </textFill>
       </Label>
-      <Pane layoutX="402.0" layoutY="636.0" onMouseClicked="#reservar" prefHeight="46.0" prefWidth="196.0" />
+      <Pane layoutX="396.0" layoutY="637.0" onMouseClicked="#reservar" prefHeight="46.0" prefWidth="203.0" />
    </children>
 </AnchorPane>
